# jpstats

./: .gitignore  Cargo.toml  README.md  output_stats.txt  precache_mecab_dict.sh  usage.md
narou/: output_stats.txt  stats.db
narou/config/: base_filters.txt  common_edges_right.txt  indexes.txt  links.txt  other_stats.txt  userdict.csv
novels/: output_stats.txt  readme.txt  stats.db
novels/config/: merge_blacklist.txt  other_stats.txt  parse_filters.txt  regression.txt  stats.txt
src/: main.rs  regression.rs
workspace/: output_stats.txt  stats.db
workspace/config/: allowed_test_failures.txt  common_edges_left.txt  merge_blacklist.txt  other_stats.txt  regression.txt  vocab_filters.txt
workspace/scripts/: fixer.py
